tests/fixtures/valid/ValidUseStatementOrderingFunctionImports.php
<?php

declare(strict_types=1);

namespace App\Fixtures\UseOrderingFns;

use function Vendor\Fns\alpha_function;
use function Vendor\Fns\beta_function;

/**
 * Positive: function-only use imports sorted alphabetically by fully-qualified name.
 */
final class ValidUseStatementOrderingFunctionImports
{
}
