tests/fixtures/invalid/InvalidUseStatementOrderingGrouped.php
<?php

namespace App\Example;

use Vendor\Example\{ClassB, ClassA};

/**
 * Negative fixture: grouped class imports are not sorted alphabetically.
 */
final class InvalidUseStatementOrderingGrouped
{
}
